--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
         </dependency>
 
         <!-- -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <!-- -->
+
+        <!-- -->
         <!-- This is the core HAPI library -->
         <dependency>
             <groupId>ca.uhn.hapi</groupId>
