--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#spring.rabbitmq.host=
-#spring.rabbitmq.port=
-#spring.rabbitmq.username=
-#spring.rabbitmq.password=
-#spring.rabbitmq.virtual-host=
-#spring.rabbitmq.connection-timeout= 5000
-#spring.rabbitmq.publisher-confirms=true
-#spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5673
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.connection-timeout= 5000
+spring.rabbitmq.publisher-confirms=true
+spring.rabbitmq.publisher-returns=true
 #
 #//实际使用必须 手动Ack 原因自查.
 #spring.rabbitmq.listener.simple.acknowledge-mode=manual
